[package]
name = "regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
csv = "1.3.0"
plotters = "0.3.5"
progress-observer = "2.1.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
